--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -176,6 +176,86 @@ a.secondary {
     overflow: hidden;
 }
 
+.navMobile {
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    border-radius: 50%;
+    width: 70px;
+    height: 70px;
+    background-color: white;
+    display: grid;
+    place-items: center;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 0 20px;
+    border: 1px solid #bbb;
+    z-index: 1001;
+    cursor: pointer;
+    user-select: none;
+}
+
+.navMobile img {
+    width: 30px;
+}
+
+.navMobile .menu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
+.navMobile .inner {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 18rem;
+    padding: 40px 30px;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 0 20px;
+    transform: translateX(20px);
+    opacity: 0;
+    visibility: hidden;
+    cursor: default;
+    transition: 0.4s;
+}
+
+.navMobile .inner.show {
+    transform: translateX(0);
+    opacity: 1;
+    visibility: visible;
+}
+
+.navMobile .inner ul {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.navMobile .inner ul li {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    color: #444;
+    cursor: pointer;
+    transition: 0.4s;
+}
+
+.navMobile .inner ul li:last-child {
+    border-top: 1px solid #ccc;
+    padding-top: 20px;
+}
+
+.navMobile .inner ul li img {
+    width: 24px;
+}
+
+.navMobile .inner ul li a {
+    text-decoration: none;
+    color: #444;
+}
+
 .descriptive {
     display: flex;
     align-items: center;
@@ -602,7 +682,7 @@ header:not(.main) p {
 }
 
 .contact a:not(.primary),
-.contact a:not(.secondary){
+.contact a:not(.secondary) {
     width: 60px;
     height: 60px;
     display: grid;
@@ -686,16 +766,16 @@ footer div.languages ul li.active {
     color: white;
 }
 
-footer div.socials .logoContainer{
+footer div.socials .logoContainer {
     margin-top: 40px;
     opacity: 0.4;
 }
 
-footer div.socials .logoContainer img{
+footer div.socials .logoContainer img {
     width: 48px;
 }
 
-footer div.socials .logoContainer span{
+footer div.socials .logoContainer span {
     color: #555;
 }
 
