--- a/assets/styles/queries.css
+++ b/assets/styles/queries.css
@@ -63,7 +63,7 @@
 
 @media (max-width:1040px) {
     .headerWrapper::before {
-        width: 20%;
+        width: 0;
     }
 
     .descriptive .display {
